style.css
/* CSS BY Carley Gohring */

/* IMPORTED FONTS */
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');

/* CSS RESET BY Eric Meyer */
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* ROOT VARIABLES */
:root {
    --font-family: 'Playfair Display', 'Times New Roman', serif;
    --midnight-blue: #1F2A44;
    --olive-green: #76885B;
    --champagne-gold: #E5C185;
    --linen: #F8F4EC;
    --dark-charcoal: #2B2B2B;
    --soft-white: #FAF9F6;
    --font-size: 1rem;
}

/* GLOBAL STYLES (mobile first/small) */
* {
    font-size: var(--font-size);
    font-family: var(--font-family);
}

/*HTML STYLES*/
html {
    font-size: 100%;
}

/*BODY STYLES*/
body {
    font-family: var(--font-family);
    background-color: var(--soft-white);
    color: var(--dark-charcoal);
    line-height: 1.5;
    display: grid;
    grid-template-columns: auto;
    justify-content: center;
    align-items: center;
    width: 95%;
    margin: 0 auto;
}

/*HEADER, MAIN, FOOTER STYLES*/
header, footer {
    background-color: var(--midnight-blue);
}

header {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

main {
    background-color: var(--linen);
}

/*HEADING STYLES*/
h1 {
    font-size: 4rem;
    font-weight: bold;
    color: var(--soft-white);
    text-align: center;
}

h2 {
    color: var(--midnight-blue);
    font-size: 2rem;
    padding: 0vw 5vw 1vw 5vw;
}

h3 {
    color: var(--soft-white);
    font-size: 1.5rem
}

/*NAV STYLES*/
nav ul {
    display: flex;
    flex-direction: row;
    background-color: var(--champagne-gold);
    list-style: none;
    justify-content: center;
}

nav ul li {
    padding: 2vw 4vw;
    font-size: 1.5rem;
    font-weight: 600;
}
nav ul li a {
    text-decoration: none;
    color: var(--midnight-blue);
}

/*TEXT STYLES*/
header p {
    color: var(--soft-white);
    font-style: italic;
    text-align: center;
    padding-bottom: 5vw;
}

p {
    color: var(--dark-charcoal);
    padding: 0 5vw 0 5vw;
}

h3 ~ p {
    color:  var(--soft-white);
    padding: 0;
}

figcaption {
    font-style: italic;
    text-align: center;
    padding: 1vw;
    margin-bottom: 1vw;
}

address {
    color: var(--soft-white);
    text-align: center;
    padding: 8vw 0vw 5vw 0vw;
    font-size: 1rem;
}

/*UL STYLES*/
ul {
    color: var(--soft-white);
    list-style-type: disc;
    padding-left: 4vw;
}

/*HR STYLES*/
hr {
    border: none;
    border-top: 0.5vw solid var(--champagne-gold);
    margin: 5vw auto;
    width: 90%;
}

/*A STYLES*/
div ~ a {
    color: var(--soft-white);
    text-decoration: none;
    background-color: var(--olive-green);
    font-weight: 600;
    padding: 1.5vw 26vw 1.5vw 26vw;
    margin: -3vw 5.5vw 0vw 5.5vw;
    border-radius: 8px;
    display: inline-block;
    text-align: center;
    font-size: 1.25rem;
}

address > a {
    color: var(--soft-white);
    text-decoration: none;
}

div > a {
    color: var(--champagne-gold);
    text-decoration: none;
    padding: 0.25rem;
}

/*CLASS STYLES*/
.green-container {
    background-color: var(--olive-green);
    border-radius: 15px;
    padding: 2.5vw;
    margin: 3vw 5vw;
}

.image-and-caption {
    display: inline-block;
    border-radius: 1rem 1rem 1rem 1rem;
    box-shadow: 0px 4px 8px 1px rgb(175, 169, 169);
    margin: 2rem;
    overflow: hidden;
    background-color: var(--soft-white);
}

.email {
    color: var(--champagne-gold);
    font-weight: 600;
}

/*ID STYLES*/
#first-h2 {
    padding-top: 10vw;
    padding-bottom: 0.25vw;
}

#social-media {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0vw 2.5vw 3vw 2.5vw;
}

#gallery-anchor {
    display: flex;
    justify-content: center;
}

/* MEDIA QUERY (medium) */

/* MEDIA QUERY (large) */

/* MEDIA QUERY (xl) */

